[metadata]
name = human_robot_gym
author = Jakob Thumm
author_email = jakob.thumm@tum.de
version = 0.1.0
description="human-robot-gym is an extension to the robosuite package\
             to train RL algorithms on robots in human environments."
url = TODO

[options]
install_requires =
    bvh==0.3
    mujoco_py==2.1.2.14
    opencv_python==4.5.5.64
    robosuite==1.3.2
    stable_baselines3==1.5.0
    hpp-fcl==2.2.0
    eigenpy==2.9.2
    pin==2.6.14
    pybullet==3.2.2
